[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cosmwasm-std = { version = "1.0.0-beta6" }
isotonic-credit-agency = { path = "../contracts/isotonic-credit-agency", version = "0.5.0", features = ["library"] }
isotonic-market = { path = "../contracts/isotonic-market", version = "0.5.0", features = ["library"] }
isotonic-osmosis-oracle = { path = "../contracts/isotonic-osmosis-oracle", version = "0.5.0", features = ["library"] }
isotonic-token = { path = "../contracts/isotonic-token", version = "0.5.0", features = ["library"] }
osmo-bindings = { git = "https://github.com/confio/osmosis-bindings", rev = "9d67da34195e8f4153e6bb36c2f623317f5f7f3a" }
#osmo-bindings = "0.5.0"
utils = { version = "0.5.0", path = "../packages/utils" }
anyhow = "1"
cw-multi-test = "0.13.0"
osmo-bindings-test = { git = "https://github.com/confio/osmosis-bindings", rev = "9d67da34195e8f4153e6bb36c2f623317f5f7f3a" }
#osmo-bindings-test = "0.5.0"

