[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.0.0-beta6"
isotonic-credit-agency = { path = "../contracts/isotonic-credit-agency", version = "0.5.0", features = ["library"] }
isotonic-market = { path = "../contracts/isotonic-market", version = "0.5.0", features = ["library"] }
isotonic-osmosis-oracle = { path = "../contracts/isotonic-osmosis-oracle", version = "0.5.0", features = ["library"] }
isotonic-token = { path = "../contracts/isotonic-token", version = "0.5.0", features = ["library"] }
osmo-bindings = "0.5.1"
utils = { version = "0.5.0", path = "../packages/utils" }
anyhow = "1"
cw-multi-test = "0.13.0"
osmo-bindings-test = "0.5.1"
derivative = "2.2.0"
