[package]
name = "isotonic-credit-agency"
version = "0.5.0"
authors = ["Tomasz Kurcz <tom@confio.gmbh>"]
edition = "2021"
description = "Isotonic Credit Agency smart contract"
repository = "https://github.com/confio/isotonic"
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta6" }
cosmwasm-storage = { version = "1.0.0-beta6" }
cw-storage-plus = "0.13.0"
cw-utils = "0.13.0"
cw2 = "0.13.0"
isotonic-market = { path = "../isotonic-market", version = "0.5.0", features = ["library"] }
isotonic-osmosis-oracle = { path = "../isotonic-osmosis-oracle", version = "0.5.0", features = ["library"] }
isotonic-token = { path = "../isotonic-token", version = "0.5.0", features = ["library"] }
osmo-bindings = "0.6.0"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
utils = { version = "0.5.0", path = "../../packages/utils" }
either = "1.6"

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = { version = "1.0.0-beta6" }
cw-multi-test = "0.13.0"
osmo-bindings-test = "0.6.0"
