[package]
name = "isotonic-market"
version = "0.5.0"
authors = ["Jakub Bogucki <jakub@confio.gmbh>"]
edition = "2018"
description = "Implementation of Market contract"
repository = "https://github.com/confio/isotonic"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta6" }
cosmwasm-storage = { version = "1.0.0-beta6" }
cw-storage-plus = "0.13.0"
cw-utils = "0.13.0"
cw2 = "0.13.0"
cw20 = "0.13.0"
isotonic-osmosis-oracle = { path = "../isotonic-osmosis-oracle", version = "0.5.0", features = ["library"] }
isotonic-token = { path = "../isotonic-token", version = "0.5.0", features = ["library"] }
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
utils = { version = "0.5.0", path = "../../packages/utils" }

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = { version = "1.0.0-beta6" }
cw-multi-test = "0.13.0"
