[package]
name = "isotonic-market"
version = "0.5.0"
authors = ["Jakub Bogucki <jakub@confio.gmbh>"]
edition = "2021"
description = "Implementation of Market contract"
repository = "https://github.com/confio/isotonic"
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.2.6"
cosmwasm-storage = "1.2.6"
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
isotonic-osmosis-oracle = { path = "../isotonic-osmosis-oracle", version = "0.5.0", features = ["library"] }
isotonic-token = { path = "../isotonic-token", version = "0.5.0", features = ["library"] }
osmo-bindings = "0.6.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = "1.0.26"
utils = { version = "0.5.0", path = "../../packages/utils" }

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = "1.2.6"
cw-multi-test = "0.16.4"
osmo-bindings-test = "0.6.1"
