[package]
name = "isotonic-osmosis-oracle"
version = "0.5.0"
authors = ["Tomasz Kurcz <tom@confio.gmbh>"]
edition = "2018"
description = "The Isotonic Price Oracle based on the Osmosis DEX"
repository = "https://github.com/confio/isotonic"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta6" }
cosmwasm-storage = { version = "1.0.0-beta6" }
cw-storage-plus = "0.13.0"
cw2 = "0.13.0"
osmo-bindings = "0.2.0"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
utils = { version = "0.5.0", path = "../../packages/utils" }

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = { version = "1.0.0-beta6"}
cw-multi-test = "0.13.0"
derivative = "2"
osmo-bindings-test = "0.2.0"
