[package]
name = "isotonic-osmosis-oracle"
version = "0.6.0"
authors = ["Tomasz Kurcz <tom@confio.gmbh>"]
edition = "2021"
description = "The Isotonic Price Oracle based on the Osmosis DEX"
repository = "https://github.com/confio/isotonic"
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.2.6"
cosmwasm-storage = "1.2.6"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
osmo-bindings = "0.6.0"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = "1.0.26"
utils = { version = "0.6.0", path = "../../packages/utils" }

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = "1.2.6"
cw-multi-test = "0.13.4"
derivative = "2"
osmo-bindings-test = "0.6.0"
