[package]
name = "isotonic-token"
version = "0.5.0"
authors = ["Jakub Bogucki <jakub@confio.gmbh>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta6" }
cosmwasm-storage = { version = "1.0.0-beta6" }
cw-storage-plus = "0.13.0"
cw2 = "0.13.0"
cw20 = "0.13.0"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
utils = { version = "0.5.0", path = "../../packages/utils" }

[dev-dependencies]
cosmwasm-schema =  "1.0.0-beta6"
cw-multi-test = "0.13.0"
anyhow = "1"
