[package]
name = "isotonic-token"
version = "0.5.0"
authors = ["Jakub Bogucki <jakub@confio.gmbh>"]
edition = "2021"
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.2.6" }
cosmwasm-storage = { version = "1.2.6" }
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
utils = { version = "0.5.0", path = "../../packages/utils" }

[dev-dependencies]
cosmwasm-schema =  "1.2.6"
cw-multi-test = "0.16.4"
anyhow = "1"
