[package]
name = "lendex-credit-agency"
version = "0.4.0"
authors = ["Tomasz Kurcz <tom@confio.gmbh>"]
edition = "2018"
description = "Lendex Credit Agency smart contract"
repository = "https://github.com/confio/lendex"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta5" }
cosmwasm-storage = { version = "1.0.0-beta5" }
cw-storage-plus = "0.12.1"
cw-utils = "0.12.1"
cw2 = "0.12.1"
lendex-market = { path = "../lendex-market", version = "0.4.0", features = ["library"] }
lendex-oracle = { path = "../lendex-oracle", version = "0.4.0", features = ["library"] }
lendex-token = { path = "../lendex-token", version = "0.4.0", features = ["library"] }
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
utils = { version = "0.4.0", path = "../../packages/utils" }

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = { version = "1.0.0-beta5" }
cw-multi-test = "0.12.1"
