[package]
name = "lendex-market"
version = "0.2.0"
authors = ["Jakub Bogucki <jakub@confio.gmbh>"]
edition = "2018"
description = "Implementation of Market contract"
repository = "https://github.com/confio/lendex"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta" }
cosmwasm-storage = { version = "1.0.0-beta" }
cw-storage-plus = "0.10"
cw0 = "0.10"
cw2 = "0.10"
cw20 = "0.10"
lendex-oracle = { path = "../lendex-oracle", version = "0.2.0", features = ["library"] }
lendex-token = { path = "../lendex-token", version = "0.2.0", features = ["library"] }
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
utils = { version = "0.2.0", path = "../../packages/utils" }

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = { version = "1.0.0-beta" }
cw-multi-test = "0.10"
