[package]
name = "lendex-oracle"
version = "0.4.0"
authors = ["Tomasz Kurcz <tom@confio.gmbh>"]
edition = "2018"
description = "The Lendex Price Oracle"
repository = "https://github.com/confio/lendex"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta5" }
cosmwasm-storage = { version = "1.0.0-beta5" }
cw-storage-plus = "0.12.1"
cw2 = "0.12.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
utils = { version = "0.4.0", path = "../../packages/utils" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta5" }
